<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.fragment.home.DisplayEvent">


    <TextView
        android:id="@+id/eventEndTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="52dp"
        android:text="@string/textview"

        android:contentDescription="@string/eventEndTimeDisplay"
        android:textColor="@color/col_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventStartTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/eventStartTimeDisplay"
        android:text="@string/textview"
        android:textColor="@color/col_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventNameLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/no_loc"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:contentDescription="@string/eventNameLocation"
        android:textColor="@color/col_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameDisplay"
        />

    <TextView
        android:id="@+id/eventNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/textview"
        android:textSize="32sp"
        android:textStyle="bold"
        android:contentDescription="@string/eventNameLocation"
        android:textColor="@color/col_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDisplay"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="73dp"
        android:onClick="buttonStartEditEvent"
        android:text="@string/edit"
        android:contentDescription="@string/buttonDisplay"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDisplayDelete"
        app:layout_constraintEnd_toStartOf="@+id/buttonDisplayDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/buttonDisplayDelete"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="144dp"
        android:onClick="buttonStartDeleteEvent"
        android:contentDescription="@string/buttonDisplayDelete"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDisplay"
        app:cornerRadius="50dp"/>

    <ImageButton
        android:id="@+id/favorite_button"
        android:layout_width="30dp"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="#00ffffff"
        android:clickable="true"
        android:onClick="buttonStarEvent"
        android:src="@android:drawable/btn_star_big_off"
        android:contentDescription="@string/favorite_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <ImageView
        android:id="@+id/horlogeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="159dp"
        android:contentDescription="@string/horlogeIcon"
        app:layout_constraintEnd_toStartOf="@+id/eventStartTimeDisplay"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_alarm_24" />

    <ImageView
        android:id="@+id/horlogeIconEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="159dp"
        android:contentDescription="@string/horlogeIcon"
        app:layout_constraintEnd_toStartOf="@+id/eventEndTimeDisplay"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/eventStartTimeDisplay"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_alarm_24" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="184dp"
        android:contentDescription="@string/locationIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_location_on_24" />

</androidx.constraintlayout.widget.ConstraintLayout>