...

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <EditText
                    android:id="@+id/editEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/event_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonEventAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event_button_text"
            app:cornerRadius="50dp" />

        <ProgressBar
...
