<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.ui.ContactFragment">

    <LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="vertical"
        tools:ignore="UselessParent">

    <LinearLayout
        android:id="@+id/contact_email_adder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/contactInput"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:divider="@color/teal_200"
            android:dividerHeight="1dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:hint="@string/example_email"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/addContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:backgroundTint="@color/col_on_primary"
            android:textColor="@color/col_on_secondary"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <include layout="@layout/contact_email_list" />



</LinearLayout>

</FrameLayout>