...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/custom_calendar_view"
    tools:context=".navigation.fragment.calendar.CustomCalendarView"
    android:background="@color/col_on_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
    </LinearLayout>


    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView"
        android:numColumns="7" />

</LinearLayout>

