<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:visibility="visible">



    <Button
        android:id="@+id/addEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:text="@string/add_event"
        android:textAlignment="center"
        android:textColor="@color/col_on_primary"
        app:cornerRadius="50dp" />



    <Button
        android:id="@+id/viewEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/view_events"
        android:textAlignment="center"
        android:textColor="@color/col_on_primary"
        app:cornerRadius="50dp" />



</LinearLayout>
